--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "npx wdio run ./wdio.conf.js",
+
+    "test-test": "npx wdio run ./wdio.conf.js --spec prueba.js",
+
     "test-login": "npx wdio run ./wdio.conf.js --spec login.test.js",
     "test-products": "npx wdio run ./wdio.conf.js --spec products.test.js",
     "test-menu": "npx wdio run ./wdio.conf.js --spec menu.test.js",
